<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Series App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_series_list">SeriesListActivity</string>
    <string name="msg_error_server">Series server unavailable</string>
    <string name="action_share_serie">Share Serie</string>
    <string name="search_serie">Search Serie</string>
    <string name="title_activity_serie_detail">Serie Detail</string>
    <string name="serie_banner">Banner Serie</string>
    <string name="app_settings">App Settings</string>
    <string name="filter_settings">Filter Settings</string>
    <!-- Strings for Preferences Screen -->
    <string name="pref_title_username">Username</string>
    <string name="pref_summary_username">Enter your username</string>
    <string name="pref_title_email">Email</string>
    <string name="pref_summary_email">Enter your email</string>
    <string name="pref_title_filter_options">Filter Options</string>
    <string name="pref_summary_filter_options">Specify criteria to filter the series</string>

    <string-array name="pref_filter_options_entries">
        <item>Name</item>
        <item>Description</item>
        <item>Network</item>
    </string-array>
    <string-array name="pref_filter_options_default_values">
        <item>Name</item>
    </string-array>

    <string name="pref_sort_by_rating">Sort by Rating</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="title_activity_my_settings">MySettingsActivity</string>
    <string name="pref_title_show_concluded_series">Concluded Series</string>
    <string name="pref_summary_show_concluded_series">Show concluded series over the main screen</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="pref_title_notifications_via_arduino">Arduino</string>
    <string name="pref_summary_notifications_via_arduino">Notifications via Arduino</string>
    <string name="pref_title_notifications_color">Notification Color</string>
    <string name="title_activity_episodio_detail">EpisodioDetailActivity</string>
    <string name="episode_image">Episode Image</string>
    <string name="episodeName">Episode Name</string>
    <string name="episodeIssueDate">Episode Issue Date</string>
    <string name="episodeRating">Episode Rating</string>
    <string name="comments_separator">Comments</string>
    
    <string name="action_favorite_serie">Favourite Serie</string>
    <string name="view_favourite_series">Favourite Series</string>
    
    <string name="add_comment">Add Comment</string>
    <string name="title_activity_comment">CommentActivity</string>
	<string name="inlcude_my_location">Include my Location</string>
	<string name="remove_comment">Remove Comment</string>
	
	<string name="arduino_id">Arduino Id</string>
	<string name="arduino_id_summary">Enter your Arduino Id</string>
	
	<string name="seasons_separator">Seasons</string>
	<string name="description_separator">Description</string>
	
	<string name="actual_location">Actual Location</string>
	
	<string name="delete_comment">Delete Comment</string>
	
	<string name="ok">Ok</string>
	<string name="cancel">Cancel</string>
</resources>
