<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory android:title="@string/app_settings">
        <EditTextPreference android:key="pref_username" android:title="@string/pref_title_username" android:summary="@string/pref_summary_username"/>
        <EditTextPreference android:key="pref_useremail" android:title="@string/pref_title_email" android:summary="@string/pref_summary_email"/>
        <SwitchPreference android:key="pref_show_concluded_series" android:title="@string/pref_title_show_concluded_series" android:summary="@string/pref_summary_show_concluded_series" android:defaultValue="true"   />
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/filter_settings">
        <MultiSelectListPreference android:key="pref_filter_options" android:title="@string/pref_title_filter_options" android:summary="@string/pref_summary_filter_options" android:defaultValue="@array/pref_filter_options_default_values" android:entries="@array/pref_filter_options_entries" android:entryValues="@array/pref_filter_options_entries"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/notification_settings">
        <SwitchPreference android:key="pref_notifications" android:title="@string/pref_title_notifications" android:defaultValue="@string/no" />
        <EditTextPreference android:key="pref_arduino_id" android:title="@string/arduino_id" android:summary="@string/arduino_id_summary"/>
    </PreferenceCategory>
    

</PreferenceScreen>
