<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="es.deusto.series_app.SeriesListActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item android:id="@+id/mnu_search_serie" android:title="@string/search_serie" android:icon="@drawable/ic_action_search" android:showAsAction="always|collapseActionView" android:actionViewClass="android.widget.SearchView"></item>
    <item android:id="@+id/mnu_view_favourite_series" android:orderInCategory="50" android:title="@string/view_favourite_series" android:icon="@drawable/ic_action_not_important" android:showAsAction="ifRoom"></item>

</menu>
