<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="es.deusto.series_app.activity.EpisodioDetailActivity" >

<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:paddingTop="10dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/episodeImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:contentDescription="@string/episode_image"
            android:paddingLeft="10dp"
            android:paddingRight="30dp" />

      <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/episodeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:ems="10"
                android:hint="@string/episodeName"
                android:textSize="20sp" />
            
            <TextView
                android:id="@+id/episodeIssueDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:ems="5"
                android:inputType="date"
                android:hint="@string/episodeIssueDate" />

            <TextView
                android:id="@+id/episodeRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:ems="10"
                android:hint="@string/episodeRating" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_marginTop="20dp"
        android:text="@string/comments_separator" />

    <ListView
        android:id="@+id/listComments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp" >
    </ListView>

</LinearLayout>